# Osmium

./: .env.example  .gitignore  README.md  foundry.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json
api/: [...path].ts  health.ts  index.ts  runner.ts
api/demo/: operator-token.ts  preview.ts
api/demo/live-settlement/: preview.ts  run.ts
api/merchant/: audit.ts  market-data.ts  quote.ts  receipt.ts
api/x402/: settle.ts  supported.ts  verify.ts
api/x402/settle/: observe.ts
apps/agent-runner/: package.json  tsconfig.json
apps/agent-runner/src/: abi.ts  agentAttackSmoke.ts  agentLoop.ts  agentProofs.ts  auditStore.ts  client.ts  config.ts  demo.ts  liveSettlement.ts  merchant.ts  merchantReceipt.ts  osmium.ts  (+6 more)
apps/web/: index.html  package.json
contracts/osmium-stylus/: Cargo.toml  README.md
contracts/osmium-stylus/src/: lib.rs  main.rs
deployments/: OsmiumPolicyEngine.sol  robinhood-testnet.json
docs/: agent-runner.md  architecture.md  demo-script.md  deployment.md  threat-model.md
examples/external-agent-tsla/: README.md  agent.ts  mandate.json  test.ts
examples/merchant-tsla-data/: README.md  server.ts  test.ts
merchant-kit/: README.md
merchant-kit/src/: withOsmium402.ts
proofs/: latest-agent-clearance.json
scripts/: activate-robinhood-stylus.sh  check-robinhood-stylus.sh  deploy-reference-solidity.sh  deploy-robinhood-stylus.sh  deploy-settlement-router.sh  networks.json  rpc-smoke-test.sh  set-settlement-router.sh
security/: ACCESS_CONTROL.md  AUDIT_SCOPE.md  THREAT_MODEL.md  TRUST_BOUNDARIES.md
(+15 files in other folders)
